changed bottom to 4 rem to stop filter floating up and down on smaller screens

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -73,7 +73,7 @@
   color: transparent;
   border-radius: 10px;
   position: absolute;
-  bottom: 9%;
+  bottom: 4rem;
   right: 3%;
 
   @include media(tabletAndUp) {
